--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,98 +1,70 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8" />
-  <title>BIOM9450 CDS – Demo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css">
+  <title>CDS Demo – Home</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>BIOM9450 CDS – Minimal Frontend</h1>
-  <small>Register → Login (JWT) → Patients (list/create)</small>
+  <h1>Clinical Decision Support (CDS) – Demo</h1>
+  <small>Register → Login → Manage Patients → Generate LLM Reports</small>
+
+  <!-- Dynamic navs (rendered by common.js / initHeader + renderSubNav) -->
+  <nav id="mainNav"></nav>
+  <nav id="subNav"></nav>
 
   <fieldset>
-    <legend>1) Health check</legend>
-    <button id="btnHealth">GET /api/health</button>
-    <pre id="outHealth"></pre>
+    <legend>What this site does</legend>
+    <p>
+      This is a minimal teaching app for <strong>BIOM9450</strong> showing a full stack:
+      a Node.js/Express backend with MySQL, and a tiny HTML/JS frontend.
+      It supports role-aware access to patient data and on-demand LLM report generation (Mistral).
+    </p>
+    <ul>
+      <li><span class="kv">POST /register_user</span> – create an account and receive a JWT.</li>
+      <li><span class="kv">POST /login_user</span> – log in to get a JWT.</li>
+      <li><span class="kv">GET/POST /patients</span> – list/create patients (role aware).</li>
+      <li><span class="kv">GET /patients/search</span> – search by <em>id</em> or name/DOB.</li>
+      <li><span class="kv">POST /reports/generate</span> – ask the LLM to write a report for a patient.</li>
+    </ul>
   </fieldset>
 
-  <fieldset>
-    <legend>2) Register user</legend>
-    <div class="half">
-      <select id="regPrefix">
-        <option value="">Prefix (optional)</option>
-        <option>Dr.</option><option>Prof.</option><option>Mr.</option><option>Ms.</option><option>Mrs.</option>
-      </select>
-      <input id="regFirst" placeholder="First name" required />
-      <input id="regMiddle" placeholder="Middle name (optional)" />
-      <input id="regLast" placeholder="Last name" required />
-      <input id="regEmail" type="email" placeholder="email@example.org" required />
-      <input id="regPass" type="password" placeholder="Password (min 8 chars)" required />
-      <select id="regRole">
-        <option value="clinician">clinician</option>
-        <option value="researcher">researcher</option>
-        <option value="admin">admin</option>
-        <option value="patient">patient</option>
-      </select>
-      <button id="btnRegister">POST /register_user</button>
+<fieldset>
+  <legend>Backend Health Check</legend>
+
+  <!-- Health check button -->
+  <div class="row">
+    <div>
+      <button class="primary" id="btnHealth">GET /api/health</button>
     </div>
-    <pre id="outRegister"></pre>
-  </fieldset>
+  </div>
 
-  <fieldset>
-    <legend>3) Login</legend>
-    <div class="half">
-      <input id="loginEmail" type="email" placeholder="email@example.org" required />
-      <input id="loginPass" type="password" placeholder="Password" required />
-      <button id="btnLogin">POST /login_user</button>
-      <button id="btnLogout" type="button">POST /logout</button>
-    </div>
-    <div>Token: <code id="tokenShort">(none)</code></div>
-    <pre id="outLogin"></pre>
-  </fieldset>
+  <!-- Live status -->
+  <div id="healthStatus" style="margin-top: 1rem; font-weight: 600; color: #333;">
+    Status:
+    <span id="serverStatus" style="color:#999;">Waiting...</span>
+  </div>
 
-  <fieldset>
-    <legend>4) Patients (protected)</legend>
-    <div class="row">
-        <div class="half">
-        <select id="patPrefix">
-          <option value="">Prefix (optional)</option>
-          <option>Mr.</option><option>Ms.</option><option>Mrs.</option><option>Dr.</option>
-        </select>
-        <input id="patFirst" placeholder="First name" required />
-        <input id="patMiddle" placeholder="Middle name (optional)" />
-        <input id="patLast" placeholder="Last name" required />
-        <input id="patDOB" type="date" placeholder="Date of birth" />
-        <select id="patSex">
-          <option value="">Sex</option>
-          <option>M</option><option>F</option><option>Other</option>
-        </select>
-        <input id="patPhone" placeholder="Phone number" />
-        <input id="patAddress" placeholder="Address" />
-        <input id="patEmail" type="email" placeholder="Email" />
-        <input id="patEmergencyName" placeholder="Emergency contact name" />
-        <input id="patEmergencyPhone" placeholder="Emergency contact phone" />
-        <input id="patNotes" placeholder="Notes (optional)" />
-        <button id="btnCreatePatient">POST /patients</button>
-        <button id="btnListPatients">GET /patients</button>
-        </div>
+  <!-- Server output -->
+  <pre
+    id="outHealth"
+    style="
+      background-color:#111;
+      color:#0f0;
+      padding:0.75rem;
+      border-radius:0.5rem;
+      margin-top:0.5rem;
+      white-space:pre-wrap;
+      font-family: monospace;
+    "
+  ></pre>
+</fieldset>
 
-        <div class="half">
+  <footer>CDS Demo • <span id="year"></span></footer>
 
-        <!-- NEW: fetch a patient by ID or by name/DOB -->
-        <div class="row" style="margin-top:.5rem">
-          <input id="patFetchId" type="number" min="1" placeholder="patient_id (optional)" />
-          <input id="patFetchFirst" placeholder="First name (optional)" />
-          <input id="patFetchLast" placeholder="Last name (required if no ID)" required />
-          <input id="patFetchDOB" type="date" placeholder="Date of birth (optional)" />
-          <button id="btnGetPatient">GET /patients (by ID or name/DOB)</button>
-        </div>
-        </div>
-    </div>
-
-    <pre id="outPatients"></pre>
-    </fieldset>
-
-  <script src="app.js"></script>
+  <!-- index.js imports common.js and calls initHeader() -->
+  <script type="module" src="js/common.js"></script>
+  <script type="module" src="js/index.js"></script>
 </body>
 </html>
