Updated the login and home pages. Moving the register button closer to the top of the login page and fixing the headers within the home page

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Clinical Decision Support (CDS) – Demo</h1>
+  <h1>Clinical Decision Support (CDS)</h1>
 
   <!-- Dynamic navs (rendered by common.js / initHeader + renderSubNav) -->
   <nav id="mainNav"></nav>
   <nav id="subNav"></nav>
 
   <fieldset>
-    <legend>What this site does</legend>
+    <h1>What this site does</h1>
     <p>
       This is a minimal teaching app for <strong>BIOM9450</strong> showing a full stack:
       a Node.js/Express backend with MySQL, and a tiny HTML/JS frontend.
@@ -30,7 +30,7 @@
   </fieldset>
 
 <fieldset>
-  <legend>Backend Health Check</legend>
+  <h1>Backend Health Check</h1>
 
   <!-- Health check button -->
   <div class="row">
@@ -60,7 +60,7 @@
   ></pre>
 </fieldset>
 
-  <footer>CDS Demo • <span id="year"></span></footer>
+  <footer>CDS • <span id="year"></span></footer>
 
   <!-- index.js imports common.js and calls initHeader() -->
   <script type="module" src="js/common.js"></script>
