New design to the login page

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div class="login-container">
+  <div class="container">
     <!-- LEFT: Image -->
     <div class="login-illustration">
       <img src="Image/login.png" alt="AI Clinical Illustration" />
