New design to the reg page

--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div class="registerContainer">
+<div class="container">
   <div class="registerIllustration">
     <img src="Image/login.png" alt="AI CDS Illustration" />
   </div>
@@ -20,7 +20,7 @@
 
       <button id="btnGoLogin" class="secondary">Already have an account? Login</button>
 
-      <form id="regForm" novalidate>
+      <form id="registerForm" novalidate>
         <div class="rowName row">
           <div class="col prefix">
             <label>Prefix</label>
