FIxed the login page, removed the required in the inputs

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -24,11 +24,11 @@
 
         <form id="loginForm" autocomplete="on">
           <label for="loginEmail">Email</label>
-          <input id="loginEmail" name="email" type="email" placeholder="email@example.org" required />
+          <input id="loginEmail" name="email" type="email" placeholder="email@example.org"/>
           <small class="field-error" id="errLoginEmail"></small>
 
           <label for="loginPass">Password</label>
-          <input id="loginPass" name="password" type="password" placeholder="Password" required />
+          <input id="loginPass" name="password" type="password" placeholder="Password"/>
           <small class="field-error" id="errLoginPass"></small>
 
           <button class="primary" type="submit" id="btnLogin">Login</button>
