changed the the address col to date of birth

--- a/Frontend/patients_list.html
+++ b/Frontend/patients_list.html
@@ -19,7 +19,7 @@
 
         <div class="row">
           <div class="col">
-            <label>Last name (required for search)</label>
+            <label>Last name (required)</label>
             <input id="qLast" placeholder="Last name" />
             <small id="errQLast" class="field-error"></small>
           </div>
