--- a/Frontend/patient_info.html
+++ b/Frontend/patient_info.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Patient Details – CDS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -13,6 +13,7 @@
   <nav id="subNav"></nav>
 
   <h1>Patient Information</h1>
+  
   <section id="patientInfo">
     <p>Loading patient details...</p>
   </section>
