--- a/Frontend/patient_info.html
+++ b/Frontend/patient_info.html
@@ -5,21 +5,28 @@
   <title>Patient Details – CDS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style/profile.css" />
 </head>
 <body>
-
-<main>
+  <h1>Patient Information</h1>
   <nav id="mainNav"></nav>
   <nav id="subNav"></nav>
 
-  <h1>Patient Information</h1>
-  
-  <section id="patientInfo">
-    <p>Loading patient details...</p>
-  </section>
-</main>
+  <div class="container form-container-page">
+    <div class="form-wrapper" style="width: 90%; border-radius: 1.5rem;">
+      <legend>Patient Details</legend>
+      
+      <section id="patientInfo">
+        <p>Loading patient details...</p>
+      </section>
 
-<script type="module" src="js/common.js"></script>
-<script type="module" src="js/patient_info.js"></script>
+      <div class="button-row">
+        <button id="btnUpdatePatientDetails" class="primary">Update Patient Details</button>
+      </div>
+    </div>
+  </div>
+
+  <script type="module" src="js/common.js"></script>
+  <script type="module" src="js/patient_info.js"></script>
 </body>
 </html>
