Refactor: Centralize validation logic and clean up auth pages

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -22,7 +22,7 @@
 
         <button class="secondary" type="button" id="btnGoRegister">Haven’t got an account? Register</button>
 
-        <form id="loginForm" autocomplete="on">
+        <form id="loginForm" autocomplete="on" novalidate>
           <label for="loginEmail">Email</label>
           <input id="loginEmail" name="email" type="email" placeholder="email@example.org"/>
           <small class="field-error" id="errLoginEmail"></small>
